# solana-perf-libs

./: Makefile  README.md
ci/: build.sh  buildkite.yml
ci/docker-ispc/: Dockerfile
src/: CMakeLists.txt  Makefile  gpu-common.mk
src/common/: decl.h  gpu_common.h  perftime.h  thread.h
src/crypt-if/: chacha.h
src/cuda-crypt/: chacha.h  chacha20_core.cu  chacha_cbc.cu  common.h  modes.h  modes_lcl.h  test.cu  test_chacha.cu
src/cuda-ecc-ed25519/: common.cu  ed25519.h  fe.cu  fe.h  fixedint.h  ge.cu  ge.h  gpu_ctx.cu  gpu_ctx.h  int128.h  license.txt  main.cu  sc.cu  sc.h  sha512.cu  verify.cu
src/cuda-headers/: gpu_common.h
src/cuda-poh-verify/: poh_verify.cu
src/cuda-sha256/: sha256.cu  tomcrypt_macros.h
src/opencl-crypt/: aes.h  aes_cbc.cpp  aes_cbc_encdec.cl  aes_core.cl  aes_core.cpp  chacha.h  chacha20_core.cl  chacha_cbc.cl  chacha_cbc.cpp  cl_chacha.cpp  common.h  modes.h  test.cpp
src/opencl-ecc-ed25519/: common.c  common.cu  cuda_cl.h  ed25519.h  fe.c  fe.h  gpu_ctx.cpp  gpu_ctx.h  main.cpp  sc.c  sc.h  sha512.c  sha512.h  sign.cpp  verify.cl  verify.cpp
src/opencl-platform/: cl_common.h  cl_init_platform.cpp  cl_list_kernels.cl  kernels_aes_cbc.h  kernels_chacha_cbc.h  kernels_precomp_data.h  kernels_sha256.h  kernels_verify.h
src/opencl-poh-verify/: cl_poh_verify.cpp  poh_verify.cl  poh_verify.cpp
src/poh-simd/: Makefile  build.sh  poh-verify.ispc
src/poh-verify-test/: main.cpp  test_hashes_332_129  test_hashes_output_332  test_num_hashes_arr_332
src/sgx-ecc-ed25519/: seed.c
src/sgx/signing/: Makefile  build.sh  signing.c  signing.edl  signing_public.h  signing_trusted.c  signing_untrusted.c
src/sgx/test/: Makefile  build.sh  signing_test.c
